--- a/devitti/src/main/res/values/strings.xml
+++ b/devitti/src/main/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="app_name">Devitti</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="google_maps_key">AIzaSyAES7RjQ0gC0XpGclPRFWxjVEKFSIBrIH8</string>
+
+
+
 
 </resources>
